--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,18 @@
 *.user
 *.userosscache
 *.sln.docstates
+.vscode
+.idea 
+
+
+# MT-DNN downloaded data and egg files
+data/
+mt_dnn_models/
+checkpoint/
+tensorboard_logdir/ 
+*.egg-info
+
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
